# tokenkick

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  test_app_mode.py  test_claude_setup.py  test_cli.py  test_codex_surface_patterns.py  test_codex_surface_stats.py  test_consent.py  test_direct.py  test_docs.py  test_doctor.py  test_kicker.py  test_mcp_core.py  test_mcp_setup.py  test_models.py  test_notifier.py  test_orchestration.py  test_reset_calendar.py  test_reset_defense.py  test_scheduling.py  test_sources.py  test_state_io.py  test_telegram_remote.py  tokenkick-telegram@.service  tokenkick@.service
docs/: AGENT_PLAYBOOK.md  CHANGELOG.md  HOW_TOKENKICK_WORKS.md  MAGIC_SETUP.md  MCP.md  PROVIDERS.md  README.md  TOKENKICK_COMMANDS.md
scripts/: assemble-macos-app.sh  build-bundled-tk.sh  build-swift-app.sh  create-local-dmg.sh  create-public-export.sh  find-macos-mach-o.sh  generate-macos-icon.sh  generate-swift-fixtures.sh  notarize-macos-dmg.sh  package-local-macos-app.sh  package-public-macos-app.sh  pyinstaller_entry.py  render-readme-demo.py  sign-local-macos-app.sh  sign-macos-app.sh  sign-macos-dmg.sh  staple-and-verify-macos-package.sh  verify-macos-package.sh
test_fixtures/: claude_usage_loading_screen.txt  claude_usage_mid_use.txt  codex_provider_usage_baseline.json
tokenkick/: __init__.py  antigravity.py  app_commands.py  app_mode.py  claude_setup.py  cli.py  codex_surface_patterns.py  codex_surface_stats.py  codexbar_source.py  consent.py  direct.py  discovery.py  doctor.py  interactive.py  kicker.py  mcp_core.py  mcp_server.py  mcp_setup.py  migrations.py  models.py  notifier.py  orchestration.py  recovery_hints.py  reservation_advisories.py  reset_calendar.py  reset_defense.py  scheduling.py  (+7 more)
(+96 files in other folders)
